open resources for another module to read